--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,13 @@
 ---------------------------------------------------------------------------------------------------
-Version: 18.0.0
+Version: 18.0.2
+Date: 2020-03-xx
+  Features:
+  Changes:
+  Bugfixes:
+    - repair tool is not excluded (tool subgroup no longer globally excluded, some specific tool item types are)
+  Info:
+---------------------------------------------------------------------------------------------------
+Version: 18.0.1
 Date: 2020-03-25
   Features:
     - Initial Release
